# ColorSystem

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  colorsystem.cpp  colorsystem.hpp
include/: colorsystem.hpp
test/: CMakeLists.txt  TestUtilities.hpp  aces2065.cpp  cielab.cpp  colorsystem.cpp  common.hpp  illuminants.cpp  macbeth.cpp  main.cpp  matrices.cpp  oklab.cpp  screen.cpp  spectrum.cpp  units.cpp
